Cart Popup overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@
   background-color: white;
   border: 2px solid #800080;
   overflow-y: auto;
+  overflow-x: hidden;
   z-index: 1;
   top: 55px !important;
   border-radius: 8px !important;
